[gd_scene load_steps=7 format=3 uid="uid://bn8hu03c4egi7"]

[ext_resource type="FontFile" uid="uid://bdwskevh3ewa3" path="res://Assets/UI/BoldPixels.otf" id="1_0gua7"]
[ext_resource type="Script" uid="uid://beia135ij0t00" path="res://Scenes/game_over_screen.gd" id="1_kk8k2"]
[ext_resource type="Texture2D" uid="uid://bprhuxqgkdqo7" path="res://Assets/Map/WhiteBG.png" id="2_e5yba"]
[ext_resource type="Texture2D" uid="uid://pddpd7arjxme" path="res://Assets/UI/GameOverScreen/HomeButton.png" id="3_e5yba"]
[ext_resource type="Texture2D" uid="uid://cqka6vpt8yqae" path="res://Assets/UI/GameOverScreen/RetryButton.png" id="4_ladg1"]

[sub_resource type="LabelSettings" id="LabelSettings_jb6in"]
line_spacing = -4.0
font = ExtResource("1_0gua7")

[node name="GameOverScreen" type="Node2D"]
script = ExtResource("1_kk8k2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-21, -10)
scale = Vector2(3.0625, 3.080247)
texture = ExtResource("2_e5yba")
centered = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameOver" type="Label" parent="CanvasLayer"]
self_modulate = Color(0.18039216, 0.13333334, 0.18431373, 1)
offset_left = 601.5
offset_top = 426.0
offset_right = 671.5
offset_bottom = 442.0
scale = Vector2(7.5, 7.5)
text = "Game Over"
label_settings = SubResource("LabelSettings_jb6in")
horizontal_alignment = 1
vertical_alignment = 1

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
offset_left = 609.0
offset_top = 540.0
offset_right = 677.0
offset_bottom = 572.0
scale = Vector2(7.5, 7.5)
columns = 2

[node name="Home" type="TextureButton" parent="CanvasLayer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_e5yba")

[node name="Retry" type="TextureButton" parent="CanvasLayer/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("4_ladg1")

[node name="Score" type="Label" parent="CanvasLayer"]
self_modulate = Color(0.18039216, 0.13333334, 0.18431373, 1)
offset_top = 28.5
offset_right = 230.4
offset_bottom = 82.7
scale = Vector2(7.5, 7.5)
text = "Score: "
label_settings = SubResource("LabelSettings_jb6in")
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitTimerLabel" type="Label" parent="CanvasLayer"]
self_modulate = Color(0.18039216, 0.13333334, 0.18431373, 1)
offset_left = 3.0
offset_top = 895.5
offset_right = 151.66666
offset_bottom = 911.5
scale = Vector2(4.5, 4.5)
text = "Go to menu in: "
label_settings = SubResource("LabelSettings_jb6in")
vertical_alignment = 1

[node name="QuitTimer" type="Timer" parent="."]
wait_time = 90.0
autostart = true

[connection signal="pressed" from="CanvasLayer/GridContainer/Home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="CanvasLayer/GridContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="timeout" from="QuitTimer" to="." method="_on_quit_timer_timeout"]
